--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,12 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "@interfaces": ["src/app/shared/interfaces"],
+      "@interfaces/*": ["src/app/shared/interfaces/*"],
+      "@/*": ["src/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
